--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
                         <a class="link" href="http://183.82.105.91:84/doc/page/preview.asp" target="_blank">HNR-2 Wheeler Yard</a>
                     </div>
                 </div>
+                 <div class=" shadow-lg card-container text-center col-lg-3 col-sm-12">
+                    <h1 class="card-heading m-3">Vikarabad</h1>
+                    <div class="m-3">
+                        <a class="link" href="http://175.101.22.30/doc/page/login.asp" target="_blank">Vikarabad (WS & SR)</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
